# erica

./: .gitignore  ERICA_ARCHITECTURE.md  Erica.sln  README.md
agent/: README.md  pyproject.toml  requirements.txt
agent/erica_agent/: __init__.py  config.py  context.py  embeddings.py  erica_memory.py  llm_planner.py  main.py  memory.py  memory_backend.py  memory_long.py  memory_short.py  mempalace_client.py  models.py  palace_config.py  persona.py  planner.py  registry.py  skills_registry.py  voice.py  workflows.py
agent/scripts/: smoke_agent.py
config/: README.md  persona.yaml
config/workflows/: writing_session.yaml
docs/: RUNBOOK.md
memory/: README.md  identity.txt  wing_config_seed.json
scripts/: Finalize-EricaDeployment.ps1  Initialize-GitRepo.ps1  README.md  Restore-ExplorerShell.ps1  Set-EricaShell.ps1  Start-MemPalaceMCP.ps1
shell/: App.xaml  App.xaml.cs  Erica.Shell.csproj  MainWindow.xaml  MainWindow.xaml.cs  README.md  ShellAppHost.cs  app.manifest  appsettings.json
shell/Config/: ShellConfiguration.cs  ShellSettings.cs  ShellStartupOptions.cs
shell/Logging/: ShellLogging.cs
shell/Services/: AgentClient.cs  AgentPlanDtos.cs  CommandRouter.cs  CopilotApiClient.cs  GlobalHotkeyService.cs  VoiceInputHandler.cs
skills/: README.md  __init__.py  audio_skill.py  network_skill.py  persona_skill.py  system.py  window_skill.py
skills/manifests/: audio.device.yaml  audio.volume.yaml  network.wifi_toggle.yaml  persona.set_mode.yaml  system.launch.yaml  window.minimize_foreground.yaml  window.move_resize.yaml
ui/: README.md
windows/: README.md
(+12 files in other folders)
