[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "erica-agent"
version = "0.1.0"
description = "FastAPI agent for the Erica Windows shell"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "apscheduler>=3.10",
  "jsonschema>=4.0",
  "mempalace>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
windows = ["pycaw>=20240210", "comtypes>=1.4"]
voice = ["SpeechRecognition>=3.10", "pyaudio>=0.2.14"]
mempalace = ["mempalace>=3.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["erica_agent*"]

[tool.ruff]
line-length = 100
